# streamlit-cloud-test

./: app.py  pyproject.toml  requirements.txt
