[tool.poetry]
name = "streamlit-test"
version = "0.1.0"
description = ""
authors = ["Ochi Yuma <ochiyuma.ochi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.4.0"
amplify = "^0.6.5"
joblib = "^1.1.0"
tqdm = "^4.62.3"
pandas = "^1.3.5"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

